# chatbot-helpdesk

./: .example-env  .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  configuration.yaml  pyproject.toml  pytest.ini  run.sh  test.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08d9bf3b18eb_adding_question_answer.py  402ddb2c2a9c_remove_message_type.py  4435344c3b69_add_staff_table.py  5803f0c662a7_all_revisions.py  6a1b3248e103_add_usertype_in_conversation.py  6e7cac003f90_first_init.py  714694a01664_revision_text.py  7626c8981695_change_text_into_text_column.py  83715f75ba31_add_access_level_in_user.py  8422ffa963e3_adding_document_table.py  994762c3c8fb_add_conversation_uuid.py  cbd9f2fcd7a2_add_created_at_and_updated_at_columns.py  cf36f38837be_regenerate_migration.py  eb1850e8b6dd_add_name_column_to_conversation.py  f68aa6eee879_adding_filepath_to_document.py  f7fc7e5ed5e1_add_change_user_to_student_table.py
chatbot/: Application.py  app.py  cmd.py  config.py  logger.py  main.py
chatbot/database/: __init__.py
chatbot/dependencies/: DocumentEmbedder.py  EmailHandler.py  InformationRetriever.py  IntentClassifier.py  ModelLoader.py  PromptManager.py  ResponseGenerator.py  TitleGenerator.py
chatbot/http/: Response.py
chatbot/intent_handler/: AcademicAdministrationIntentHandler.py  IntentHandlerFactory.py  OtherIntentHandler.py  ResourceServiceIntentHandler.py  SupportIntentHandler.py  __init__.py
chatbot/routers/: __init__.py  auth.py  chat.py  conversation.py  (+6 more)
prompts/: intent_classification.yaml  public_response_generator.yaml  response_generator.yaml  title_generator.yaml
test/: application_test.py  document_embedder_test.py  information_retriever_test.py  intent_classifier_test.py  model_loader_test.py  prompt_manager_test.py  response_generator_test.py  title_generator_test.py  utils.py
(+27 files in other folders)
