[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
langchain = "^0.2.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
google-generativeai = "^0.6.0"
jinja2 = "^3.1.4"
pytest = "^8.2.2"
langchain-openai = "^0.1.8"
faiss-cpu = "^1.8.0"
langchain-text-splitters = "^0.2.1"
langchain-community = "^0.2.4"
pypdf = "^4.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
trio = "^0.25.1"
sqlalchemy = "^2.0.31"
mysql-connector-python = "^9.0.0"
alembic = "^1.13.2"
cryptography = "^42.0.8"
pytest-order = "^1.2.1"
itsdangerous = "^2.2.0"
passlib = "^1.7.4"
faker = "^26.0.0"
fire = "^0.6.0"


infisical-python = "^2.2.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatbot = "chatbot.cmd:cli"